@@ -4,16 +4,16 @@
 
 # ATI X1600 backlight control (MacBook Pro)
 lcd_x1600 {
-	# initial backlight level (0 - 255)
-	init = 200
+	# initial backlight level [200] (0 - 255, -1 to disable)
+	init = -1
 	# step value (1 - 127)
 	step = 10
 }
 
 # Intel GMA950 backlight control (MacBook)
 lcd_gma950 {
-	# initial backlight level (0x1f - 0x94 usually)
-	init = 0x6f
+	# initial backlight level [0x6f] (0x1f - 0x94 usually, -1 to disable)
+	init = -1
 	# step value (0x01 - 0x20)
 	step = 0x0f
 }
@@ -25,7 +25,7 @@ audio {
 
 	# sound card to use
 	card = "default"
-	# initial volume (0 - 100%, -1 to disable)
+	# initial volume [80] (0 - 100%, -1 to disable)
 	init = -1
 	# step value (1 - 50%)
 	step = 10
