@@ -1,6 +1,7 @@
 version 0.9:
 	- Added preliminary audio support: increase and decrease PCM, mute and
 	unmute both Headphone and Front
+	- Allow disabling the initial backlight level setting
 
 version 0.8:
 	- wait for both light sensors to be under the threshold before
